--- a/website/index.html
+++ b/website/index.html
@@ -1,44 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NYT Crosswords</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="white-box">
         <div class="corner-number">1</div>
-        <div class="box-content">Analyzing the NYT Crossword<br>Part 1</div>
+        <div class="title"><i>Title</i></div>
+        <div class="center-vertical-box">
+            <div class="box-content">The New York Times crossword is a cultural icon. Initially born into the Times as a
+                means for Americans to escape the gloominess of an impeding war in 1942, the crossword has survived for
+                more
+                than 83 years, and developed a strong following over time.
+            </div>
+            <div class="box-content">Like learning most things, a large part of solving the crossword is about pattern
+                recognition: understanding a crossword theme or filling in missing letters in a familiar word. Patterns
+                can
+                also be found within crossword construction as well: in the grid configuration as well as common clue
+                and
+                answers pairs. Analyzing that system can help you better understand the crossword and make you a better
+                solver.
+            </div>
+        </div>
     </div>
     <div class="white-box" style="left: 92vh;">
         <div class="corner-number">2</div>
-        <div class="box-content">Part 2</div>
+        <div class="title"><i>About the Data</i></div>
+
+        <div class="box-content">The data for this analysis comes from Nov. 21, 1993 to Jan. 1, 2025, totaling
+            11,365
+            puzzles and 949,106 clues, from XWordInfo.com, which contains puzzle information for every Times
+            crossword
+            ever published.</div>
+        <div class="box-image-center"><img loading="lazy" src="../analysis/images/crosswords_e.gif"></div>
+        <div class="box-content">While the data from 1942 to 1992 is certainly useful, the date restrictions here
+            are so
+            that the observations are only from the Will Shortz era, where he edited the crossword. This just makes
+            the
+            stylistic choices of Shortz's puzzles more apparent in the data. </div>
     </div>
-    <div class="white-box" style="left: 184vh;">
+    <div class="black-box" style="left: 184vh;">
+
+    </div>
+    <div class="white-box" style="left: 184vh; top: 94vh;">
         <div class="corner-number">3</div>
-        <div class="box-content">Part 3</div>
-    </div>
-    <div class="black-box" style="left: 184vh; top: 94vh;">
+        <div class="title"><i>Visual Analysis</i></div>
+
+        <div class="box-content">With over 11,365 puzzles in the dataset, there are bound to be repeating tile
+            configurations. Below is the most common pattern, which has appeared 14 times over the last 30 years:</div>
+
+        <div class="split-vertical-box" style="height: 50vh;">
+            <div><img loading="lazy" src="../analysis/images/most_frequent_representation_e.gif">
+            </div>
+            <div style="width: 25vh;">This pattern was most recently published on
+                December 1st, 2014, so despite it being the most frequent pattern, it's still fairly rare.</div>
+        </div>
     </div>
     <div class="white-box" style="left: 184vh; top: 186vh;">
         <div class="corner-number">4</div>
-        <div class="box-content">Part 4</div>
+        <div class="box-content" style="padding-top:8vh;">In fact, nearly all of the puzzle tile patterns are unique:
+        </div>
+        <div class="box-image-center" style="padding-top: 2vh; padding-bottom: 2vh;"><img id="unique-pie-chart"
+                loading="lazy" src="../analysis/images/percent_unique_pie_e1.png"></div>
+        <div class="box-content">Though this might be the case, there are still important insights to be gained from
+            observing the placement of the white and black tiles.</div>
+
     </div>
     <div class="bottom-border" style="left: 276vh; top: 278vh;"></div>
-    <div class="white-box" style="left: 276vh; top: 186vh;">
+    <div class="white-box" style="left: 184vh; top: 278vh;">
         <div class="corner-number">5</div>
-        <div class="box-content">Part 5</div>
+        <div class="box-content">Below is a heatmap of the tile patterns of all 15x15 crosswords in the dataset. Though
+            puzzle sizes vary over the week, there's 9,369 crosswords with these dimensions. The scale shows, for each
+            tile, what percentage of crosswords had a black square in that location.</div>
+        <div class="box-image-center""><img loading=" lazy" src="../analysis/images/heatmap_e.gif"></div>
+        <div class="box-content">Notice how all of the corners of the grid are left empty, since one or two letter
+            answers are extremely rare. Instead, there are clear borders around those areas, making three and four
+            letter words dominate those spaces. Nearly all puzzles have rotational symmetry, that helps explain the
+            pattern of white spaces in the middle, since placing a black square there would mean a one letter answer
+            would need to be in the center of the grid.</div>
     </div>
-    <div class="white-box" style="left: 368vh; top: 186vh">
+    <div class="white-box" style="left: 184vh; top: 370vh;">
         <div class="corner-number">6</div>
-        <div class="box-content">Part 6</div>
+        <div class="box-content" style="padding-top:8vh;">This pattern has not changed much over the years, either.
+        </div>
+        <div class="box-image-center""><img loading=" lazy" id="heatmap-animation"
+            src="../analysis/images/heatmap_animation_e1.png" style="padding-top:2vh; padding-bottom: 2vh;"></div>
+        <div class="box-content">Above is the same heatmap, smoothed over each year. Though there is some variance year
+            to
+            year, as a whole, the same pattern of rotational symmetry and white corners is visible throughout.</div>
     </div>
 </body>
 
-<script>
+<!-- <script>
     if (screen && screen.width > 500) {
         document.write('<script type="text/javascript" src="scrolling.js"><\/script>');
     }
-</script>
+</script> -->
+<script src="gifs.js"></script>
+
 </html>
