--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Million Crossword Clues</title>
+    <link rel="icon" type="image/png" href="../illustrator/logo.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 
