Edited through square 6
- Changed heatmaps
- Edited grammar/quotes/italics

--- a/website/index.html
+++ b/website/index.html
@@ -14,17 +14,18 @@
         <div class="corner-number">1</div>
         <div class="title"><i>One Million Crossword Clues</i></div>
         <div class="center-vertical-box" style="height: 70%;">
-            <div class="box-content">The New York Times crossword is a cultural icon. Initially born into the Times as a
-                means for Americans to escape the gloominess of an impeding war in 1942, the crossword has survived for
+            <div class="box-content"><i>The New York Times</i> crossword is a cultural icon. Initially born into the
+                <i>Times</i> as a
+                means for Americans to escape the gloominess of an impending war in 1942, the crossword has survived for
                 more
                 than 83 years, and developed a strong following over time.
             </div>
             <div class="box-content">Like learning most things, a large part of solving the crossword is about pattern
                 recognition: understanding a crossword theme or filling in missing letters in a familiar word. Patterns
                 can
-                also be found within crossword construction as well: in the grid configuration as well as common clue
+                also be found within crossword construction: both in the grid configuration as well as common clue
                 and
-                answers pairs. Analyzing that system can help you better understand the crossword and make you a better
+                answer pairs. Analyzing that system can help you better understand the crossword and make you a better
                 solver.
             </div>
         </div>
@@ -35,13 +36,13 @@
 
         <div class="box-content">The data for this analysis comes from Nov. 21, 1993 to Jan. 1, 2025, totaling
             11,365
-            puzzles and 949,106 clues, from XWordInfo.com, which contains puzzle information for every Times
+            puzzles and 949,106 clues, from XWordInfo.com, which contains puzzle information for every <i>Times</i>
             crossword
             ever published.</div>
         <div class="box-image-center"><img loading="lazy" src="../analysis/images/crosswords_e.gif"></div>
         <div class="box-content">While the data from 1942 to 1992 is certainly useful, the date restrictions here
             are so
-            that the observations are only from the Will Shortz era, where he edited the crossword. This just makes
+            that the observations are only from the Will Shortz era, when he edited the crossword. This just makes
             the
             stylistic choices of Shortz's puzzles more apparent in the data. </div>
     </div>
@@ -68,20 +69,21 @@
         <div class="box-image-center" style="padding-top: 2vh; padding-bottom: 2vh;"><img id="unique-pie-chart"
                 loading="lazy" src="../analysis/images/percent_unique_pie_e1.png"></div>
         <div class="box-content">Though this might be the case, there are still important insights to be gained from
-            observing the placement of the white and black tiles.</div>
+            observing the placement of the white and black squares.</div>
 
     </div>
     <div class="bottom-border" style="left: 276vh; top: 278vh;"></div>
     <div class="white-box" style="left: 184vh; top: 278vh;">
         <div class="corner-number">5</div>
         <div class="box-content">Below is a heatmap of the tile patterns of all 15x15 crosswords in the dataset. Though
-            puzzle sizes vary over the week, there's 9,369 crosswords with these dimensions. The scale shows, for each
+            puzzle sizes vary over the week, there are 9,369 crosswords with these dimensions. The scale shows, for each
             tile, what percentage of crosswords had a black square in that location.</div>
-        <div class="box-image-center"><img loading=" lazy" src="../analysis/images/heatmap_e.gif"></div>
-        <div class="box-content">Notice how all of the corners of the grid are left empty, since one or two letter
-            answers are extremely rare. Instead, there are clear borders around those areas, making three and four
-            letter words dominate those spaces. Nearly all puzzles have rotational symmetry, that helps explain the
-            pattern of white spaces in the middle, since placing a black square there would mean a one letter answer
+        <div class="box-image-center"><img loading=" lazy" src="../analysis/images/heatmap_e.gif" style="height: 42vh;"></div>
+        <div class="box-content">Notice how all of the corners of the grid are left empty, since one or two-letter
+            answers are extremely rare. Instead, there are clear borders around those areas, making three and
+            four-letter words dominate those spaces. Nearly all puzzles have rotational symmetry, which helps explain
+            the
+            pattern of white spaces in the middle, since placing a black square there would mean a one-letter answer
             would need to be in the center of the grid.</div>
     </div>
     <div class="white-box" style="left: 184vh; top: 370vh;">
@@ -90,7 +92,7 @@
         </div>
         <div class="box-image-center"><img loading=" lazy" id="heatmap-animation"
                 src="../analysis/images/heatmap_animation_e1.png"
-                style="padding-top:2vh; height: 45vh; padding-bottom: 2vh;"></div>
+                style="padding-top:1vh; height: 45vh; padding-bottom: 2vh;"></div>
         <div class="box-content">Above is the same heatmap, smoothed over each year. Though there is some variance year
             to
             year, as a whole, the same pattern of rotational symmetry and white corners is visible throughout.</div>
@@ -100,7 +102,7 @@
         <div class="corner-number">7</div>
         <div class="title"><i>Answer Analysis</i></div>
 
-        <div class="box-content">There is plenty of insight to be gained from the text that actually fills the grid of
+        <div class="box-content">There's plenty of insight to be gained from the text that fills the grid of
             the puzzle, too. Being bound to the constraints of the English language, certain words appear more
             frequently than others because of their flexibility.</div>
 
