--- a/website/index.html
+++ b/website/index.html
@@ -392,7 +392,7 @@
         <div class="box-content" style="margin-top:8vh;">Even still, answers also have the potential for variance over
             time.
         </div>
-        <div class="box-image-center"><img loading=" lazy" src="../analysis/images/serena.gif"
+        <div class="box-image-center"><img loading=" lazy" src="../analysis/images/serena_e1.png"
                 style="height: 38vh; padding: 2vh;">
         </div>
         <div class="box-content">While not as common an answer as ADELE, likely for its slightly longer length and
@@ -418,7 +418,7 @@
     <div class=" white-box" style="left: 1564vh; top:646vh;">
         <div class="corner-number">28</div>
         <div class="center-vertical-box" style="height: 90%;">
-            <div class="box-image-center"><img loading=" lazy" src="../illustrator/credits_crossword.png"
+            <div class="box-image-center"><img loading=" lazy" src="../illustrator/credits_crossword.svg"
                     style="height: 55vh;">
             </div>
 
