Added basecode for tooltips

--- a/website/index.html
+++ b/website/index.html
@@ -60,7 +60,7 @@
             the last 30 years:
         </div>
 
-        <div class="tooltip" id="appearances-desc" style="left: 30vh; top: 25vh;">The appearances are the following:
+        <div class="tooltip" id="appearances-desc">The appearances are the following:
             <ol>
                 <li>6/27/1994</li>
                 <li>7/12/1995</li>
@@ -85,6 +85,9 @@
                 December 1st, 2014, so despite it being the most frequent pattern, it's still fairly rare.</div>
         </div>
     </div>
+
+
+
     <div class="white-box" style="left: 184vh; top: 186vh;">
         <div class="corner-number">4</div>
         <div class="box-content" style="padding-top:8vh;">In fact, nearly all of the puzzle tile patterns are unique:
