Half implemented scrolling, needs testing

--- a/website/index.html
+++ b/website/index.html
@@ -557,23 +557,68 @@
             <div class="box-content">All content written, coded, and arranged by <a class="link" target="_blank"
                     href="https://nikhilchinchalkar.com/">Nikhil Chinchalkar</a>.</div>
         </div>
-        <div class="tooltip" id="credits-desc">xxxxxxxxxx
+        <div class="tooltip" id="credits-desc">Each of the above clues and answers were featured in New York
+            Times crosswords.
         </div>
     </div>
 
     <!-- placeholder box for spacing -->
-    <div class="black-box" style="background-color: rgb(200,200,200); left: 1658vh; top:738vh; 
+    <div class="black-box" style="background-color: rgb(200, 200, 200); left: 1658vh; top:740vh; height: 2vh; 
     border: none;"></div>
+
+    <!-- temp object for scrolling aid -->
+    <div id="0" class="scroll" style="top: 0vh; left:  25vh;"></div>
+    <div id="1" class="scroll" style="top: 0vh; left:  125vh;"></div>
+    <div id="2" class="scroll" style="top: 0vh; left: 280vh;"></div>
+    <div id="3" class="scroll" style="top: 90vh; left: 280vh;"></div>
+    <div id="4" class="scroll" style="top: 180vh; left: 280vh;"></div>
+    <div id="5" class="scroll" style="top: 270vh; left: 280vh;"></div>
+    <div id="6" class="scroll" style="top: 365vh; left: 280vh;"></div>
+    <div id="7" class="scroll" style="top: 458vh; left: 280vh;"></div>
+    <div id="8" class="scroll" style="top: 500vh; left: 180vh;"></div>
+    <div id="9" class="scroll" style="top: 552vh; left: 332vh; background-color: white;"></div>
+    <div id="10" class="scroll" style="top: 552vh; left: 434vh; background-color: white;"></div>
+    <div id="11" class="scroll" style="top: 552vh; left: 495vh; background-color: white;"></div>
+    <div id="12" class="scroll" style="top: 552vh; left: 647vh;"></div>
+    <div id="13" class="scroll" style="top: 500vh; left: 647vh;"></div>
+    <div id="14" class="scroll" style="top: 420vh; left: 647vh;"></div>
+    <div id="15" class="scroll" style="top: 340vh; left: 647vh;"></div>
+    <div id="16" class="scroll" style="top: 260vh; left: 647vh;"></div>
+    <div id="17" class="scroll" style="top: 180vh; left: 647vh;"></div>
+    <div id="18" class="scroll" style="top: 99vh; left: 547vh;"></div>
+    <div id="19" class="scroll" style="top: 25vh; left: 547vh;"></div>
+    <div id="20" class="scroll" style="top: 5vh; left: 697vh; background-color: white;"></div>
+    <div id="21" class="scroll" style="top: 90vh; left: 777vh; background-color: white;"></div>
+    <div id="22" class="scroll" style="top: 90vh; left: 880vh; background-color: white;"></div>
+    <div id="23" class="scroll" style="top: 10vh; left: 950vh; background-color: white;"></div>
+    <div id="24" class="scroll" style="top: 50vh; left: 1110vh;"></div>
+    <div id="25" class="scroll" style="top: 99vh; left: 1110vh;"></div>
+    <div id="26" class="scroll" style="top: 170vh; left: 1110vh;"></div>
+    <div id="27" class="scroll" style="top: 254vh; left: 1110vh;"></div>
+    <div id="28" class="scroll" style="top: 273vh; left: 1110vh;"></div>
+    <div id="29" class="scroll" style="top: 315vh; left: 1010vh;"></div>
+    <div id="30" class="scroll" style="top: 360vh; left: 1160vh; background-color: white;"></div>
+    <div id="31" class="scroll" style="top: 360vh; left: 1260vh; background-color: white;"></div>
+    <div id="32" class="scroll" style="top: 330vh; left: 1360vh; background-color: white;"></div>
+    <div id="33" class="scroll" style="top: 330vh; left: 1460vh; background-color: white;"></div>
+    <div id="34" class="scroll" style="top: 280vh; left: 1500vh; background-color: white;"></div>
+    <div id="35" class="scroll" style="top: 278vh; left: 1660vh;"></div>
+    <div id="36" class="scroll" style="top: 375vh; left: 1660vh;"></div>
+    <div id="37" class="scroll" style="top: 455vh; left: 1660vh;"></div>
+    <div id="38" class="scroll" style="top: 535vh; left: 1660vh;"></div>
+    <div id="39" class="scroll" style="top: 615vh; left: 1660vh;"></div>
+    <div id="40" class="scroll" style="top: 700vh; left: 1660vh;"></div>
 </body>
 
-<!-- <script>
-    if (screen && screen.width > 500) {
-        document.write('<script type=" text/javascript" src="scrolling.js">
-                        <\ /script>');
-                            }
-                            </script> -->
+<script>
+    if (screen && screen.width > 800) {
+        console.log('here')
+        document.write('<script type=" text/javascript" src="scrolling.js"><\ /script>');
+    }
+</script>
 <script src="gifs.js"></script>
 <script src="highlights.js"></script>
 <script src="toolips.js"></script>
+<script src="scrolling.js"></script>
 
 </html>
