Added mobile minimap, adjusted scrolling on to-mobile/to-desktop

--- a/website/index.html
+++ b/website/index.html
@@ -562,10 +562,10 @@
         </div>
     </div>
 
-    <div class="minimap-annotation">
-        <img src="../illustrator/minimap-annotation.svg">
+    <div class="minimap-annotation" id="minimap-annotation">
+        <img id="minimap-annotation-image" src="../illustrator/minimap-annotation.svg">
     </div>
-    <div class="minimap">
+    <div class="minimap" id="minimap">
         <img id="minimap-image" src="../illustrator/minimap/1.svg">
     </div>
 
