Added smart scrolling icon, changed appearance of corner icon backgrounds
-TODO: clean up code, write more efficiently
-TODO: add comments
-TODO: README

--- a/website/index.html
+++ b/website/index.html
@@ -562,11 +562,24 @@
         </div>
     </div>
 
-    <div class="minimap-annotation" id="minimap-annotation">
-        <img id="minimap-annotation-image" src="../illustrator/minimap-annotation.svg">
+    <div id="minimap-annotation">
+        <img id="minimap-annotation-image" src="../illustrator/minimap_annotation.svg">
     </div>
-    <div class="minimap" id="minimap">
+    <div id="minimap-annotation-path">
+        <img id="minimap-annotation-image-path" src="../illustrator/minimap_annotation_path.svg">
+    </div>
+    <div id="minimap">
         <img id="minimap-image" src="../illustrator/minimap/1.svg">
+    </div>
+
+    <div id="snap-scrolling-annotation">
+        <img id="snap-scrolling-annotation-image" src="../illustrator/snap_scroll_annotation.svg">
+    </div>
+    <div id="snap-scrolling-annotation">
+        <img id="snap-scrolling-annotation-image-path" src="../illustrator/snap_scroll_annotation_path.svg" style="opacity: 100%; z-index: 3;">
+    </div>
+    <div id="snap-scrolling">
+        <img id="snap-scrolling-image" src="../illustrator/snap_scroll_disable.svg">
     </div>
 
     <!-- placeholder box for spacing -->
@@ -622,5 +635,6 @@
 <script src="highlights.js"></script>
 <script src="vertical.js"></script>
 <script src="minimap.js"></script>
+<script src="snap_scrolling.js"></script>
 
 </html>
