Added scrolling changes for mobile, disabled clicking on snap scroll when hidden, fixed minimap on mobile

--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="../illustrator/logo.png">
 
     <script src="gifs.js"></script>
+    <script src="scrolling.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -576,7 +577,8 @@
         <img id="snap-scrolling-annotation-image" src="../illustrator/snap_scroll_annotation.svg">
     </div>
     <div id="snap-scrolling-annotation">
-        <img id="snap-scrolling-annotation-image-path" src="../illustrator/snap_scroll_annotation_path.svg" style="opacity: 100%; z-index: 3;">
+        <img id="snap-scrolling-annotation-image-path" src="../illustrator/snap_scroll_annotation_path.svg"
+            style="opacity: 100%; z-index: 3;">
     </div>
     <div id="snap-scrolling">
         <img id="snap-scrolling-image" src="../illustrator/snap_scroll_disable.svg">
@@ -599,7 +601,7 @@
     <div id="9" class="scroll" style="top: 550vh; left: 332vh;"></div>
     <div id="10" class="scroll" style="top: 550vh; left: 434vh;"></div>
     <div id="11" class="scroll" style="top: 550vh; left: 495vh;"></div>
-    <div id="12" class="scroll" style="top: 552vh; left: 647vh;"></div>
+    <div id="12" class="scroll" style="top: 553vh; left: 647vh;"></div>
     <div id="13" class="scroll" style="top: 500vh; left: 647vh;"></div>
     <div id="14" class="scroll" style="top: 420vh; left: 647vh;"></div>
     <div id="15" class="scroll" style="top: 340vh; left: 647vh;"></div>
@@ -617,7 +619,7 @@
     <div id="27" class="scroll" style="top: 254vh; left: 1110vh;"></div>
     <div id="28" class="scroll" style="top: 273vh; left: 1110vh;"></div>
     <div id="29" class="scroll" style="top: 315vh; left: 1010vh;"></div>
-    <div id="30" class="scroll" style="top: 360vh; left: 1160vh; background-color: white;"></div>
+    <div id="30" class="scroll" style="top: 370vh; left: 1160vh; background-color: red;"></div>
     <div id="31" class="scroll" style="top: 360vh; left: 1260vh; background-color: white;"></div>
     <div id="32" class="scroll" style="top: 330vh; left: 1360vh; background-color: white;"></div>
     <div id="33" class="scroll" style="top: 330vh; left: 1460vh; background-color: white"></div>
@@ -631,10 +633,9 @@
 </body>
 
 <script src="toolips.js"></script>
-<script src="scrolling.js"></script>
+<script src="minimap.js"></script>
 <script src="highlights.js"></script>
 <script src="vertical.js"></script>
-<script src="minimap.js"></script>
 <script src="snap_scrolling.js"></script>
 
 </html>
