--- a/website/index.html
+++ b/website/index.html
@@ -7,9 +7,10 @@
     <title>One Million Crossword Clues</title>
     <link rel="icon" type="image/png" href="../illustrator/logo.png">
 
-    <script src="gifs.js"></script>
     <script src="scrolling.js"></script>
+    <script src="gifs.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ofr7ilu.css">
 </head>
 
 <body>
@@ -619,7 +620,7 @@
     <div id="27" class="scroll" style="top: 254vh; left: 1110vh;"></div>
     <div id="28" class="scroll" style="top: 273vh; left: 1110vh;"></div>
     <div id="29" class="scroll" style="top: 315vh; left: 1010vh;"></div>
-    <div id="30" class="scroll" style="top: 370vh; left: 1160vh; background-color: red;"></div>
+    <div id="30" class="scroll" style="top: 370vh; left: 1160vh; background-color: white;"></div>
     <div id="31" class="scroll" style="top: 360vh; left: 1260vh; background-color: white;"></div>
     <div id="32" class="scroll" style="top: 330vh; left: 1360vh; background-color: white;"></div>
     <div id="33" class="scroll" style="top: 330vh; left: 1460vh; background-color: white"></div>
@@ -631,6 +632,18 @@
     <div id="39" class="scroll" style="top: 615vh; left: 1660vh;"></div>
     <div id="40" class="scroll" style="top: 700vh; left: 1660vh;"></div>
 </body>
+
+<script>
+    console.log('scrolling checked')
+    if (is_desktop_formatting) {
+        document.body.style.overflowX = 'auto' //allow horizontal scroll
+        document.body.style.overflowY = 'hidden' //disallow vertical scroll
+    }
+    else {
+        document.body.style.overflowX = 'auto' //allow horizontal scroll
+        document.body.style.overflowY = 'auto' //allow vertical scroll
+    }
+</script>
 
 <script src="toolips.js"></script>
 <script src="minimap.js"></script>
