Changed minimap on load behavior, and snap scroll icon

--- a/website/index.html
+++ b/website/index.html
@@ -574,10 +574,10 @@
         <img id="minimap-image" src="../illustrator/minimap/1.svg">
     </div>
 
-    <div id="snap-scrolling-annotation">
+    <div class="snap-scrolling-annotation">
         <img id="snap-scrolling-annotation-image" src="../illustrator/snap_scroll_annotation.svg">
     </div>
-    <div id="snap-scrolling-annotation">
+    <div class="snap-scrolling-annotation">
         <img id="snap-scrolling-annotation-image-path" src="../illustrator/snap_scroll_annotation_path.svg"
             style="opacity: 100%; z-index: 3;">
     </div>
