Added loading text

--- a/website/index.html
+++ b/website/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div id="loading-screen">Loading content...</div>
     <div class="white-box" id="1.0">
         <div class="corner-number">1</div>
         <div class="title"><i>One Million Crossword Clues</i></div>
